--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "bookshelf": "^0.6.10",
     "cookie-parser": "~1.0.1",
     "debug": "~0.7.4",
+    "deepmerge": "^0.2.10",
     "ejs": "~0.8.5",
     "ejs-locals": "^1.0.2",
     "express": "~4.0.0",
